Systemd timer and service for browser tab switch
* unclutter installs its own startup script, don't need to do it as part
of our autostart
* switch to systemd for all services

Partial for #2

--- a/ansible/roles/kiosk/templates/autostart.j2
+++ b/ansible/roles/kiosk/templates/autostart.j2
@@ -1,8 +1,5 @@
-@xset s off
-@xset -dpms
-@xset s noblank
+/usr/local/bin/systemd-user-graphical-login.sh
 @{{ kiosk_browser_command }}
 {% for ITEM in kiosk_autostart_optional %}
 {{ ITEM }}
 {% endfor %}
-@unclutter
